--- a/pt/trains/index.html
+++ b/pt/trains/index.html
@@ -5,9 +5,9 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8">
-  <title>Metropolitan train network - Trip Planner | Public Transport for Thornsbury (PTfT)</title>
+  <title>Metropolitan train network - Public Transport | Transnet</title>
   <meta name="description" content="Your local transport operator for Thornsbury">
-  <meta property="og:title" content="Metropolitan train network - Trip Planner | Public Transport for Thornsbury (PTfT)">
+  <meta property="og:title" content="Metropolitan train network - Public Transport | Transnet">
   <meta property="og:url" content="">
   <meta name="og:description" content="Your local transport operator for Thornsbury">
   <meta property="og:image" content="/img/favicon.png">
@@ -19,7 +19,7 @@
   <!-- Place favicon.ico in the root directory -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="/fonts/ptft-sans.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
   <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone" rel="stylesheet">
   <link rel="stylesheet" href="/css/docs.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@3.0.1/dist/cookieconsent.css">
@@ -52,7 +52,7 @@
       <div class="nsw-header__main">
         <div class="nsw-header__waratah">
             <a href="/">
-              <img src="/img/PTfT-W.svg" alt="PTfT Logo" width="250px"/>
+              <img src="/img/TN-w.svg" alt="Transnet Logo" width="250px"/>
             </a>
         </div>       
       </div>
@@ -77,7 +77,7 @@
   <ul class="nsw-main-nav__list">
     <li>
       <a href="/pt">
-        <span>Trip Planner</span>
+        <span>Public Transport</span>
         <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_right</span>
       </a>
 
@@ -96,7 +96,7 @@
 
         <div class="nsw-main-nav__title">
           <a href="/pt/">
-            <span>Trip Planner</span>
+            <span>Public Transport</span>
             <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
           </a>
         </div>
@@ -111,20 +111,14 @@
           </li>
 
           <li>
-            <a href="/pt/light-rail">
-              <span>Light Rail</span>
-            </a>
-          </li>
-
-          <li>
             <a href="/pt/buses">
               <span>Buses</span>
             </a>
           </li>
 
           <li>
-            <a href="/pt/metro">
-              <span>Metro</span>
+            <a href="/pt/ferries">
+              <span>Ferries</span>
             </a>
           </li>
 
@@ -243,6 +237,8 @@
         <span>Contact us</span>
       </a>    </li>
   </ul>
+
+
 </nav>
  
 </head>
