--- a/pt/trains/disruptions/southmead.html
+++ b/pt/trains/disruptions/southmead.html
@@ -4,9 +4,9 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8">
-  <title>Southmead Line - Disruptions | Public Transport for Thornsbury (PTfT)</title>
+  <title>Southmead Line - Disruptions | Transnet</title>
   <meta name="description" content="Your local transport operator for Thornsbury">
-  <meta property="og:title" content="Southmead Line - Disruptions | Public Transport for Thornsbury (PTfT)">
+  <meta property="og:title" content="Southmead Line - Disruptions | Transnet">
   <meta property="og:type" content="website">
   <meta property="og:url" content="">
   <meta name="og:description" content="Your local transport operator for Thornsbury">
@@ -18,7 +18,7 @@
   <!-- Place favicon.ico in the root directory -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
   <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone" rel="stylesheet">
   <link rel="stylesheet" href="/css/docs.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@3.0.1/dist/cookieconsent.css">
@@ -51,14 +51,15 @@
       <div class="nsw-header__main">
         <div class="nsw-header__waratah">
             <a href="/">
-              <img src="/img/PTfT-c.svg" alt="PTfT Logo" width="250px"/>
+              <img src="/img/TN-w.svg" alt="Transnet Logo" width="250px"/>
             </a>
-        </div>
+        </div>       
       </div>
+
+      
       <div class="nsw-header__menu">
         <button type="button" class="js-open-nav" aria-expanded="false" aria-controls="main-nav">
           <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">menu</span>
-          <span><span class="sr-only">Open</span> Menu</span>
         </button>
       </div>
     </div>
@@ -74,8 +75,8 @@
   </div>
   <ul class="nsw-main-nav__list">
     <li>
-      <a href="https://designsystem.nsw.gov.au/index.html#about-dpc">
-        <span>Travel Info</span>
+      <a href="/pt">
+        <span>Public Transport</span>
         <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_right</span>
       </a>
 
@@ -94,35 +95,17 @@
 
         <div class="nsw-main-nav__title">
           <a href="/pt/">
-            <span>Travel Info</span>
+            <span>Public Transport</span>
             <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
           </a>
         </div>
 
-        <div class="nsw-main-nav__description"></div>
+        <div class="nsw-main-nav__description">Your one stop shop for all your trip planning needs, find information about maps, timetables, disruptions and more.</div>
 
         <ul class="nsw-main-nav__sub-list">
           <li>
             <a href="/pt/trains">
-              <span>Suburban & Regional Trains</span>
-              <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_right</span>
-            </a>
-            <div class="nsw-main-nav__sub-nav" id="sub-nav-1138" role="region" aria-label="Level 2 Submenu">
-              <div class="nsw-main-nav__header">
-                <button class="nsw-icon-button nsw-icon-button--flex js-close-sub-nav" type="button" aria-expanded="true" aria-controls="sub-nav-1138">
-                  <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_left</span>
-                  <span>Back<span class="sr-only"> to previous menu</span></span> 
-                </button>
-
-                <button class="nsw-icon-button js-close-nav" type="button" aria-expanded="true">
-                  <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">close</span>
-                  <span class="sr-only">Close Menu</span>
-                </button>
-              </div>
-
-          <li>
-            <a href="/pt/trams">
-              <span>Trams</span>
+              <span>Trains</span>
             </a>
           </li>
 
@@ -133,14 +116,14 @@
           </li>
 
           <li>
-            <a href="/pt/coaches">
-              <span>Coaches</span>
+            <a href="/pt/ferries">
+              <span>Ferries</span>
             </a>
           </li>
 
           <li>
-            <a href="/pt/metro">
-              <span>Metro</span>
+            <a href="/pt/regional">
+              <span>Regional Express (Trains & Coaches)</span>
             </a>
           </li>
 
@@ -148,8 +131,8 @@
       </div>
     </li>
     <li>
-      <a href="/fares">
-        <span>Fares & tickets</span>
+      <a href="/travelsmart">
+        <span>TravelSmart</span>
         <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_right</span>
       </a>
 
@@ -167,7 +150,7 @@
         </div>
 
         <div class="nsw-main-nav__title">
-          <a href="/fares">
+          <a href="/travelsmart">
             <span>Fares & tickets</span>
             <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
           </a>
@@ -177,26 +160,26 @@
 
         <ul class="nsw-main-nav__sub-list">
           <li>
-            <a href="/fares/travelsmart">
-              <span>TravelSmart</span>
+            <a href="/travelsmart/fares">
+              <span>Fares</span>
             </a>
           </li>
           <li>
-            <a href="/fares/ticketnet">
-              <span>TicketNet</span>
+            <a href="/travelsmart/zones">
+              <span>Zones</span>
             </a>
           </li>
           <li>
-            <a href="/fares/travelpass">
-              <span>TravelPass</span>
+            <a href="/travelsmart/travelpass">
+              <span>PTfT TravelPass (for interstate travel)</span>
             </a>
           </li>
         </ul>
       </div>
     </li>
     <li>
-     <!-- <a href="https://designsystem.nsw.gov.au/index.html#publications">
-        <span>Publications</span>
+<a href="/news-and-publications">
+        <span>News and publications</span>
         <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_right</span>
       </a>
 
@@ -214,8 +197,8 @@
         </div>
 
         <div class="nsw-main-nav__title">
-          <a href="https://designsystem.nsw.gov.au/index.html#publications">
-            <span>Publications</span>
+          <a href="/news-and-publications">
+            <span>News and publications</span>
             <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
           </a>
         </div>
@@ -224,51 +207,21 @@
 
         <ul class="nsw-main-nav__sub-list">
           <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
+            <a href="/news-and-publications/news">
+              <span>News</span>
             </a>
           </li>
           <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
+            <a href="/news-and-publications/projects">
+              <span>Projects</span>
             </a>
           </li>
           <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
+            <a href="/news-and-publications/whats-on">
+              <span>Whats On! (Events)</span>
             </a>
           </li>
-          <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://designsystem.nsw.gov.au/index.html#level-2">
-              <span>Level 2</span>
-            </a>
-          </li>  
-        </ul> -->
+        </ul>
       </div>
     </li>
     <li>
