more pt changes

--- a/pt/trains/index.html
+++ b/pt/trains/index.html
@@ -278,7 +278,7 @@
     <div class="nsw-card">
       <div class="nsw-card__content">
         <div class="nsw-card__title">
-          <a href="/travel-info/trains/network-map">Network Map</a>
+          <a href="/pt/trains/network-map">Network Map</a>
         </div>
         <!-- <div class="nsw-card__copy">
           <p>With 3 new Metro lines connecting important services and towns, services starting October 2025 throughout</p>
@@ -292,7 +292,7 @@
     <div class="nsw-card">
       <div class="nsw-card__content">
         <div class="nsw-card__title">
-          <a href="/travel-info/trains/disruptions">Disruptions</a>
+          <a href="/pt/trains/disruptions">Disruptions</a>
         </div>
         <!-- <div class="nsw-card__copy">
           <p>With 3 new Metro lines connecting important services and towns, services starting October 2025 throughout</p>
