--- a/pt/regional/index.html
+++ b/pt/regional/index.html
@@ -5,9 +5,9 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8">
-  <title>Suburban & Regional Trains | Transnet</title>
+  <title>Regional Trains | Transnet</title>
   <meta name="description" content="Your local transport operator for Thornsbury">
-  <meta property="og:title" content="Suburban & Regional Trains | Transnet">
+  <meta property="og:title" content="Regional Trains | Transnet">
   <meta property="og:type" content="website">
   <meta property="og:url" content="">
   <meta name="og:description" content="Your local transport operator for Thornsbury">
