trains to regional

--- a/pt/regional/network-map.html
+++ b/pt/regional/network-map.html
@@ -255,7 +255,7 @@
     <div class="nsw-hero-banner__container">
       <div class="nsw-hero-banner__wrapper">
         <div class="nsw-hero-banner__content">
-          <p class="nsw-small">Metropolitan train network</p>
+          <p class="nsw-small">Regional Express train & coach network</p>
           <h1>Network Map</h1>
         </div>
       </div>
