--- a/pt/regional/disruptions.html
+++ b/pt/regional/disruptions.html
@@ -277,11 +277,12 @@
           <div class="nsw-list nsw-list--8">
     <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
 </div>
-          <p>Broadshore</p>
+          <p>Archerton</p>
         </div>
       </div>
     </div>
   </div>
+
 
   <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
     <div class="nsw-disruption-card">
@@ -290,7 +291,20 @@
           <div class="nsw-list nsw-list--8">
     <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
 </div>
-          <p>Denton</p>
+          <p>Ashford</p>
+        </div>
+      </div>
+    </div>
+  </div>  
+
+  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <div class="nsw-disruption-card">
+      <div class="nsw-card__content">
+        <div class="nsw-card__title">
+          <div class="nsw-list nsw-list--8">
+    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
+</div>
+          <p>Broadshore</p>
         </div>
       </div>
     </div>
@@ -361,19 +375,6 @@
     </div>
   </div>
 
-  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-    <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-</div>
-          <p>Windermere</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
     <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
     <div class="nsw-disruption-card">
       <div class="nsw-card__content">
@@ -410,32 +411,6 @@
     </div>
   </div>
 
-  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-    <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-</div>
-          <p>Bath</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-    <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-</div>
-          <p>Bridgenorth</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
     <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
     <div class="nsw-disruption-card">
       <div class="nsw-card__content">
@@ -448,6 +423,20 @@
         </div>
       </div>
   </div>
+
+    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <div class="nsw-disruption-card">
+      <div class="nsw-card__content">
+        <div class="nsw-card__title">
+          <div class="nsw-list nsw-list--8">
+    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
+</div>
+          <p>Orvine</p>
+        </div>
+      </div>
+    </div>
+  </div>  
+  
 
       <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
     <div class="nsw-disruption-card">
@@ -473,7 +462,21 @@
         </div>
       </div>
     </div>
-  </div>   
+  </div>
+
+  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <div class="nsw-disruption-card">
+      <div class="nsw-card__content">
+        <div class="nsw-card__title">
+          <div class="nsw-list nsw-list--8">
+    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
+</div>
+          <p>Wendover</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  
 </div>
 </div>
 </div>
@@ -508,7 +511,7 @@
       </div>
       </div>
       <div class="nsw-footer__info">
-        <div class="nsw-footer__copyright">Copyright © 2025 - Public Transport for Thornsbury is an umbrella agency for the Department of Transport & Agriculture</div>
+        <div class="nsw-footer__copyright">Copyright © 2025 - Transnet is an umbrella agency for the Department of Transport & Agriculture</div>
         <div class="nsw-footer__built"><img src="/img/TBGL.svg" alt="Thornsbury Government Logo" style="height: 100%;"></div>
       </div>
     </div>
