--- a/pt/regional/disruptions.html
+++ b/pt/regional/disruptions.html
@@ -289,9 +289,10 @@
       <div class="nsw-card__content">
         <div class="nsw-card__title">
           <div class="nsw-list nsw-list--8">
-    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
+    <span class="nsw-disruption-label nsw-disruption-label--works" style="border-radius: 100%;"></span><p class="nsw-small">Works ahead</p>
 </div>
           <p>Ashford</p>
+          <p class="nsw-small">Coaches replace trains between Ashford and Aydenpol until Nov 8th, due to trackworks.</p>
         </div>
       </div>
     </div>
@@ -354,9 +355,10 @@
       <div class="nsw-card__content">
         <div class="nsw-card__title">
           <div class="nsw-list nsw-list--8">
-    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
+    <span class="nsw-disruption-label nsw-disruption-label--works" style="border-radius: 100%;"></span><p class="nsw-small">Works ahead</p>
 </div>
           <p>Kurrick</p>
+          <p class="nsw-small">Coaches replace trains between Kurrick and Aydenpol until Nov 8th, due to trackworks and signalling improvements.</p>
         </div>
       </div>
     </div>
