--- a/pt/buses/index.html
+++ b/pt/buses/index.html
@@ -12,6 +12,7 @@
   <meta property="og:url" content="">
   <meta name="og:description" content="Your local transport operator for Thornsbury">
   <meta property="og:image" content="/favicon.png">
+  <meta name="theme-color" content="#009245" />
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="icon" href="/favicon.png" sizes="any">
