--- a/pt/trains/disruptions.html
+++ b/pt/trains/disruptions.html
@@ -10,7 +10,7 @@
   <meta property="og:url" content="">
   <meta name="og:description" content="Your local transport operator for Thornsbury">
   <meta property="og:image" content="/img/favicon.png">
-  <meta name="theme-color" content="#4c26a1" />
+  <meta name="theme-color" content="#009245" />
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="icon" href="/img/favicon.png" sizes="any">
