--- a/pt/trains/disruptions/aynsdale.html
+++ b/pt/trains/disruptions/aynsdale.html
@@ -11,6 +11,8 @@
   <meta property="og:url" content="">
   <meta name="og:description" content="Your local transport operator for Thornsbury">
   <meta property="og:image" content="/favicon.png">
+  <meta name="theme-color" content="#009245" />
+
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="icon" href="/favicon.png" sizes="any">
