--- a/news-and-publications/projects/RER.html
+++ b/news-and-publications/projects/RER.html
@@ -5,13 +5,13 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8">
-  <title>Regional Express Revival project - News & Publifications | Public Transport for Thornsbury (PTfT)</title>
+  <title>Regional Express Revival project - News & Publifications | Transnet</title>
   <meta name="description" content="Your local transport operator for Thornsbury">
-  <meta property="og:title" content="Regional Express Revival project - News & Publifications | Public Transport for Thornsbury (PTfT)">
+  <meta property="og:title" content="Regional Express Revival project - News & Publifications | Transnet">
   <meta property="og:url" content="">
   <meta name="og:description" content="Your local transport operator for Thornsbury">
   <meta property="og:image" content="/img/favicon.png">
-  <meta name="theme-color" content="#4c26a1" />
+  <meta name="theme-color" content="#009245" />
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="icon" href="/img/favicon.png" sizes="any">
@@ -52,7 +52,7 @@
       <div class="nsw-header__main">
         <div class="nsw-header__waratah">
             <a href="/">
-              <img src="/img/PTfT-W.svg" alt="PTfT Logo" width="250px"/>
+              <img src="/img/TN-w.svg" alt="Transnet Logo" width="250px"/>
             </a>
         </div>       
       </div>
@@ -76,8 +76,8 @@
   </div>
   <ul class="nsw-main-nav__list">
     <li>
-      <a href="/trip-planner">
-        <span>Trip Planner</span>
+      <a href="/pt">
+        <span>Public Transport</span>
         <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">keyboard_arrow_right</span>
       </a>
 
@@ -95,8 +95,8 @@
         </div>
 
         <div class="nsw-main-nav__title">
-          <a href="/trip-planner/">
-            <span>Trip Planner</span>
+          <a href="/pt/">
+            <span>Public Transport</span>
             <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
           </a>
         </div>
@@ -105,31 +105,25 @@
 
         <ul class="nsw-main-nav__sub-list">
           <li>
-            <a href="/trip-planner/trains">
+            <a href="/pt/trains">
               <span>Trains</span>
             </a>
           </li>
 
           <li>
-            <a href="/trip-planner/light-rail">
-              <span>Light Rail</span>
-            </a>
-          </li>
-
-          <li>
-            <a href="/trip-planner/buses">
+            <a href="/pt/buses">
               <span>Buses</span>
             </a>
           </li>
 
           <li>
-            <a href="/trip-planner/metro">
-              <span>Metro</span>
+            <a href="/pt/ferries">
+              <span>Ferries</span>
             </a>
           </li>
 
           <li>
-            <a href="/trip-planner/regional">
+            <a href="/pt/regional">
               <span>Regional Express (Trains & Coaches)</span>
             </a>
           </li>
@@ -243,6 +237,8 @@
         <span>Contact us</span>
       </a>    </li>
   </ul>
+
+
 </nav>
  
 </head>
@@ -270,41 +266,11 @@
 <div class="nsw-m-right-md nsw-m-left-md">
 <div class="nsw-p-top-sm">
 <div class="nsw-callout">
-  <div class="nsw-callout__content">
-    <p class="nsw-h1">Travel information</p>
-  </div>
+<h1>Project Overview</h1>
+<p>Lorum Ipsum</p>  
 </div>
 
 </div>
-
-<div class="nsw-grid">
-  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-    <div class="nsw-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <a href="/travel-info/trains/network-map">Network Map</a>
-        </div>
-        <!-- <div class="nsw-card__copy">
-          <p>With 3 new Metro lines connecting important services and towns, services starting October 2025 throughout</p>
-        </div> -->
-        <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
-      </div>
-    </div>
-  </div>
-
-  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-    <div class="nsw-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <a href="/travel-info/trains/disruptions">Disruptions</a>
-        </div>
-        <!-- <div class="nsw-card__copy">
-          <p>With 3 new Metro lines connecting important services and towns, services starting October 2025 throughout</p>
-        </div> -->
-        <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
-      </div>
-    </div>
-  </div>
 
 
 </div>
@@ -338,7 +304,7 @@
       </div>
       </div>
       <div class="nsw-footer__info">
-        <div class="nsw-footer__copyright">Copyright © 2025 - Public Transport for Thornsbury is an umbrella agency for the Department of Transport & Agriculture</div>
+        <div class="nsw-footer__copyright">Copyright © 2025 - Transnet is an umbrella agency for the Department of Transport & Agriculture</div>
         <div class="nsw-footer__built"><img src="/img/TBGL.svg" alt="Thornsbury Government Logo" style="height: 100%;"></div>
       </div>
     </div>
