--- a/news-and-publications/projects/RER.html
+++ b/news-and-publications/projects/RER.html
@@ -266,7 +266,36 @@
 <div class="nsw-m-right-md nsw-m-left-md">
 <div class="nsw-p-top-sm">
 <h1>Project Overview</h1>
-<p>Lorum Ipsum</p>  
+<p>The Regional Express network is getting one of the most biggest upgrades, starting in December, we're improving all regional rail lines with new tracks, improved singalling,
+accessability, more staffed stations, more services, better trains and </p>
+
+
+<h1>Works on the Archerton Line</h1>
+<div class="nsw-table nsw-table--striped" tabindex="0">
+  <table>
+    <thead>
+      <tr>
+        <th width="20%">Affected areas</th>
+        <th width="40%">Dates</th>
+        <th width="40%">Works being done</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+          <b>Location A - Location B</b>
+        </td>
+        <td>
+          <p>XX/12/2025 - XX/01/2026</p>
+        </td>
+        <td>
+          <p>Lorum Ipsum works</p>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
 </div>
 
 </div>
