--- a/news-and-publications/projects/RER.html
+++ b/news-and-publications/projects/RER.html
@@ -266,11 +266,15 @@
 <div class="nsw-m-right-md nsw-m-left-md">
 <div class="nsw-p-top-sm">
 <h1>Project Overview</h1>
-<p>The Regional Express network is getting one of the most biggest upgrades, starting in December, we're improving all regional rail lines with new tracks, improved singalling,
-accessability, more staffed stations, more services, better trains and </p>
+<p>The Regional Express network is getting one of the most biggest upgrades, starting in Early November, we're improving all regional rail lines with new tracks, improved singalling,
+accessability, more staffed stations, more services, better trains, new station upgrades and a new train line.</p>
+<p>The project is apart of the Future Proof plan, to improve and fix the existing Regional Express network while also giving it new features, all upgrades are expected to either take long periods
+to work on, or be quick and effective works that wont impact train services on a large scale.</p>
+<p>While these works take place on all lines, we are also testing the new Aurorian/R DMU sets in Late December, right until accedation (which is expected to be around Early to Mid-January), as we 
+replace some locomotive hauled services, during testing coaches will replace trains while testing takes place, all testing will be conducted during weekend nights, to create less impact to services.</p>
 
 
-<h1>Works on the Archerton Line</h1>
+<h1>Works on the Archerton, Droylsden & Wytcombe Lines</h1>
 <div class="nsw-table nsw-table--striped" tabindex="0">
   <table>
     <thead>
