--- a/news-and-publications/projects/RER.html
+++ b/news-and-publications/projects/RER.html
@@ -270,11 +270,12 @@
 accessability, more staffed stations, more services, better trains, new station upgrades and a new train line.</p>
 <p>The project is apart of the Future Proof plan, to improve and fix the existing Regional Express network while also giving it new features, all upgrades are expected to either take long periods
 to work on, or be quick and effective works that wont impact train services on a large scale.</p>
-<p>While these works take place on all lines, we are also testing the new Aurorian/R DMU sets in Late December, right until accedation (which is expected to be around Early to Mid-January), as we 
-replace some locomotive hauled services, during testing coaches will replace trains while testing takes place, all testing will be conducted during weekend nights, to create less impact to services.</p>
+<p>While these works take place on all lines, we are also testing the new Aurorian/R DMU sets in Late December, right until accredation (which is expected to be around Early to Mid-January), as we 
+replace some locomotive hauled services, during testing periods, coaches will replace trains, all testing will be conducted during weekend nights to create less impact to services.</p>
 
-
-<h1>Works on the Archerton, Droylsden & Wytcombe Lines</h1>
+<h1>Works Overview</h1>
+<p class="nsw-small"><i>Please note: All night time works (from 8:30PM until last train) are indicated by the ⏾ symbol</i></p>
+<h3>Archerton, Droylsden & Wytcombe Lines</h3>
 <div class="nsw-table nsw-table--striped" tabindex="0">
   <table>
     <thead>
@@ -287,7 +288,18 @@ replace some locomotive hauled services, during testing coaches will replace tra
     <tbody>
       <tr>
         <td>
-          <b>Location A - Location B</b>
+          <b>Northcastle - Droyslden</b>
+        </td>
+        <td>
+          <p>29/12/2025 - 05/01/2026</p>
+        </td>
+        <td>
+          <p>Signalling upgrades, basic trackworks & maintenance and station accessability works</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <b>Glendurrie (swap from Suburban services) - Archerton</b>
         </td>
         <td>
           <p>XX/12/2025 - XX/01/2026</p>
@@ -295,7 +307,7 @@ replace some locomotive hauled services, during testing coaches will replace tra
         <td>
           <p>Lorum Ipsum works</p>
         </td>
-      </tr>
+      </tr>      
     </tbody>
   </table>
 </div>
