--- a/news-and-publications/projects/RER.html
+++ b/news-and-publications/projects/RER.html
@@ -274,7 +274,7 @@ to work on, or be quick and effective works that wont impact train services on a
 replace some locomotive hauled services, during testing periods, coaches will replace trains, all testing will be conducted during weekend nights to create less impact to services.</p>
 
 <h1>Works Overview</h1>
-<p class="nsw-small"><i>Please note: All night time works (from 8:30PM until last train) are indicated by the ⏾ symbol</i></p>
+<p class="nsw-small"><i>Please note: All night time works (from 8:30PM until last train) are indicated by the</i> ⏾ <i>symbol</i></p>
 <h3>Archerton, Droylsden & Wytcombe Lines</h3>
 <div class="nsw-table nsw-table--striped" tabindex="0">
   <table>
