--- a/news-and-publications/projects/RER.html
+++ b/news-and-publications/projects/RER.html
@@ -281,8 +281,8 @@ replace some locomotive hauled services, during testing periods, coaches will re
     <thead>
       <tr>
         <th width="20%">Affected areas</th>
-        <th width="40%">Dates</th>
-        <th width="40%">Works being done</th>
+        <th width="20%">Dates</th>
+        <th width="60%">Works being done</th>
       </tr>
     </thead>
     <tbody>
@@ -291,7 +291,7 @@ replace some locomotive hauled services, during testing periods, coaches will re
           <b>Northcastle - Droyslden</b>
         </td>
         <td>
-          <p>29/12/2025 - 05/01/2026</p>
+          <p>29/12/2025 - 05/01/2026 (Brief periods, check the <a href="/pt/regional/disruptions">disruptions </a>page for more info)</p>
         </td>
         <td>
           <p>Signalling upgrades, basic trackworks & maintenance and station accessability works</p>
@@ -299,15 +299,26 @@ replace some locomotive hauled services, during testing periods, coaches will re
       </tr>
       <tr>
         <td>
-          <b>Glendurrie (swap from Suburban services) - Archerton</b>
+          <b>Glendurrie (swap from Suburban services) - Archerton ⏾</b>
         </td>
         <td>
-          <p>XX/12/2025 - XX/01/2026</p>
+          <p>10/12/2025 - 17/12/2025</p>
         </td>
         <td>
-          <p>Lorum Ipsum works</p>
+          <p>Track duplication, trackworks, platform extensions & accessability works and signalling upgrades</p>
         </td>
-      </tr>      
+      </tr>
+      <tr>
+        <td>
+          <b>Northcastle - Wytcombe</b>
+        </td>
+        <td>
+          <p>29/12/2025 - 05/01/2026 ⏾</p>
+        </td>
+        <td>
+          <p>Trackworks and signalling upgrades</p>
+        </td>
+      </tr>                
     </tbody>
   </table>
 </div>
@@ -338,7 +349,7 @@ replace some locomotive hauled services, during testing periods, coaches will re
         <li><a href="/disclaimer">Disclaimer</a></li>
       </ul>
       <div class="nsw-footer__social">
-        <a class="nsw-icon-button" href="https://x.com/PTfT_" target="_blank" rel="noopener" aria-label="X (formerly Twitter)">
+        <a class="nsw-icon-button" href="https://x.com/TransnetPT_" target="_blank" rel="noopener" aria-label="X (formerly Twitter)">
           <svg role="img" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
             <title>X (formerly Twitter)</title>
             <path d="M18.6348 13.5498L30.2914 0H27.5292L17.4078 11.7651L9.32385 0H0L12.2245 17.7909L0 32H2.76239L13.4508 19.5756L21.9881 32H31.3119L18.6342 13.5498H18.6348ZM14.8514 17.9477L13.6128 16.1761L3.75772 2.07949H8.00059L15.9537 13.4559L17.1923 15.2275L27.5305 30.0151H23.2876L14.8514 17.9484V17.9477Z" fill="white"/>
